--- a/.github/workflows/0-welcome.yml
+++ b/.github/workflows/0-welcome.yml
@@ -19,8 +19,8 @@ permissions:
 
 jobs:
   # Get the current step to only run the main job when the learner is on the same step.
-  get_current_step:
-    name: Check current step number
+  build:
+    name: Post welcome comment
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
